--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,13 @@
 body{
-    background: red !important;
+    background: #e2e2e2 !important;
+}
+.bg-primary{
+    background: #009688 !important;
+}
+.banner{
+    width:100%;
+    height: 90vh;
+    background:linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(../img/tele.jpg);
+    background-size: cover !important;
+    color: white;
 }
