--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,8 +5,12 @@
     <title>This is Homepage</title>
 </head>
 <body>
-    <section>
-        <h1>HomePage</h1>
+    <section class="banner d-flex justify-content-center align-items-center">
+        <div class="text-center">
+            <h1 class="font-weight-bold">Smart Contact Manger</h1>
+            <p> This is a random description about a smart contact manager application where we are going to store multiple number of contacts and all.</p>
+            <button class="btn bg-primary btn-lg text-white">Get Start</button>
+        </div>
     </section>
 </body>
 </html>
