--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <section>
-    <h1>This is about page</h1>
-    <h2>Here we are going to write about Smart Contact Manger application</h2>
+    <h1>This is Login page</h1>
 </section>
 </body>
 </html>
