added signup form

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,3 +11,9 @@ body{
     background-size: cover !important;
     color: white;
 }
+.my-card{
+    background: #FFFFFF;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 5px;
+}
