--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,7 +6,42 @@
 </head>
 <body>
 <section>
-    <h1>This is Sign Up page</h1>
+   <div class="container">
+       <div class="row">
+           <div class="col-md-6 offset-md-3">
+               <div class="my-card mt-5">
+                   <div class="container text-center">
+                       <img src="" th:src="@{/img/edit.png}" style="width:80px" alt=""/>
+                       <h1 class="text-center">Register Here !!</h1>
+                   </div>
+
+                   <form action="" th:action="@{/do_register}" method="post">
+                       <div class="form-group">
+                           <label for="name_field">Your Name</label>
+                           <input type="text" class="form-control" id="name_field" aria-describedby="emailHelp" placeholder="Enter here" required>
+                       </div>
+                       <div class="form-group">
+                           <label for="email_field">Your email</label>
+                           <input type="text" class="form-control" id="email_field" aria-describedby="emailHelp" placeholder="Enter here" required>
+                       </div>
+                       <div class="form-group">
+                           <label for="password_field">Your password</label>
+                           <input type="password" class="form-control" id="password_field" aria-describedby="emailHelp" placeholder="Enter here" required>
+                       </div>
+                       <div class="form-group">
+                          <textarea placeholder="Enter something yourself" rows="5" class="form-control"></textarea>
+                       </div>
+                       <div class="container text-center">
+                           <button type="submit" class="btn bg-primary text-white">Submit</button>
+                           <button type="reset" class="btn btn-warning text-white">Reset</button>
+                       </div>
+                   </form>
+               </div>
+
+           </div>
+       </div>
+
+   </div>
 </section>
 </body>
 </html>
