--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,26 +10,34 @@
        <div class="row">
            <div class="col-md-6 offset-md-3">
                <div class="my-card mt-5">
+                   <div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+                       <p th:text="${session.message.content}"></p>
+                       <th:block th:remove="all"></th:block>
+                   </div>
                    <div class="container text-center">
                        <img src="" th:src="@{/img/edit.png}" style="width:80px" alt=""/>
                        <h1 class="text-center">Register Here !!</h1>
                    </div>
 
-                   <form action="" th:action="@{/do_register}" method="post">
+                   <form action="" th:action="@{/do_register}" method="post" th:object="${user}">
                        <div class="form-group">
                            <label for="name_field">Your Name</label>
-                           <input type="text" class="form-control" id="name_field" aria-describedby="emailHelp" placeholder="Enter here" required>
+                           <input name="name" type="text" class="form-control" id="name_field" aria-describedby="emailHelp" placeholder="Enter here" required th:value="${user.name}" />
                        </div>
                        <div class="form-group">
                            <label for="email_field">Your email</label>
-                           <input type="text" class="form-control" id="email_field" aria-describedby="emailHelp" placeholder="Enter here" required>
+                           <input name="email" type="text" class="form-control" id="email_field" aria-describedby="emailHelp" placeholder="Enter here" required th:value="${user.email}">
                        </div>
                        <div class="form-group">
                            <label for="password_field">Your password</label>
-                           <input type="password" class="form-control" id="password_field" aria-describedby="emailHelp" placeholder="Enter here" required>
+                           <input name="password" type="password" class="form-control" id="password_field" aria-describedby="emailHelp" placeholder="Enter here" required th:value="${user.password}"/>
                        </div>
                        <div class="form-group">
-                          <textarea placeholder="Enter something yourself" rows="5" class="form-control"></textarea>
+                          <textarea name="about" placeholder="Enter something yourself" rows="5" class="form-control" th:value="${user.about}" ></textarea>
+                       </div>
+                       <div class="form-group form-check text-center">
+                           <input type="checkbox" name="agreement" class="form-check-input" id="agreement"/>
+                           <label for="agreement">Accept Agreement</label>
                        </div>
                        <div class="container text-center">
                            <button type="submit" class="btn bg-primary text-white">Submit</button>
